css:fix-white space

--- a/styles/catalogue.css
+++ b/styles/catalogue.css
@@ -1,12 +1,16 @@
 .catalogue_main_container{
     /* font-family: var(--primary-font); */
-    width:85%;
     margin:auto;
     font-style: normal;
 }
 
 .catalogue_header_container{
-    position:relative;
+    /* position:relative; */
+    display:flex;
+    width:90%;
+    margin-left:5%;
+    /* border:1px solid green; */
+    justify-content: flex-end;
 }
 .catalogue_main_title{
     font-size: 80px;
@@ -21,15 +25,17 @@
 }
 
 .catalogue_img_line{
-position: absolute;
-left: 75.89%;
-right: -6.97%;
-top:-30%;
-bottom: -49.%;
+justify-self: end;
+width:30%;
+/* margin-right: 2%; */
    
+}
+.catalogue_img_line>img{
+    width:90%;
 }
 
 .catalogue_data_container{
+    width:85%;
     display:flex;
     gap:5%;
     height:750px;
@@ -74,40 +80,12 @@ bottom: -49.%;
     border-radius: 12px;
 }
 
-@media (max-width:1200px) and (min-width:921px){
+@media (max-width:1100px) and (min-width:921px){
     .catalogue_data_left{
         width:50%;
     }
     .catalogue_data_left>img{
         width:100%;
-    }
-}
-
-@media (max-width:1320px) and (min-width:1100px){
-    .catalogue_img_line>img{
-        width:80%;
-        height:100%;
-    }
-    .catalogue_img_line{
-        padding-left: 2rem;
-        height:400px;
-        margin-right: -2rem;
-        width:600px;
-        left:60%;
-    }
-}
-@media (max-width:1100px) and (min-width:921px){
-    .catalogue_img_line>img{
-        width:80%;
-        height:100%;
-    }
-    .catalogue_img_line{
-        padding-left: 2rem;
-        height:400px;
-        margin-right: -2rem;
-        width:600px;
-        left:55%;
-        top:10%;
     }
 }
 
@@ -117,14 +95,14 @@ bottom: -49.%;
         font-size:var(--text-xxxlarge);
     }
     .catalogue_header_container{
-        height:420px;
+        height:max-content;
+        flex-direction: column;
+       align-items: center;
     }    
     .catalogue_img_line{
-        left: 27.89%;
-        right: 0%;
-        top:30%;
-        bottom: -49%;
-        width:50%;
+     margin:auto;
+     margin-left:40%;
+     width:50%;
     }
     .catalogue_img_line>img{
         height:70%;
@@ -158,7 +136,7 @@ bottom: -49.%;
     }
     .catalogue_data_right{
        box-sizing: border-box;
-       width:100%;
+       width:85%;
         height:fit-content;
         align-items: flex-start;
     }
