--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -115,4 +115,17 @@
     .reviews_title{
         font-size: var(--text-medium);
     }
+    /* .reviews_main_container{
+        margin-top:2rem;
+    } */
+
+}
+@media (max-width:460px){
+    .reviews_data_container{
+        height:max-content;
+        padding:1rem;
+    }
+    /* .reviews_main_container{
+        margin-top:1rem;
+    } */
 }
